force-app/main/default/objects/Service__c/fields/BuyingListPriceActual__c.field-meta.xml
<CustomField>
    <fullName>BuyingListPriceActual__c</fullName>
    <label>Buying List Price (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>