force-app/main/default/objects/Service__c/fields/CalculationUnit__c.field-meta.xml
<CustomField>
    <fullName>CalculationUnit__c</fullName>
    <label>Calculation Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>