force-app/main/default/objects/Service__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANOTHER CHARGES PER RECEIPT</fullName>
                <isActive>false</isActive>
                <label>ANOTHER CHARGES PER RECEIPT</label>
            </value>
            <value>
                <fullName>C/O</fullName>
            </value>
            <value>
                <fullName>COMMISSION SHARE</fullName>
                <isActive>false</isActive>
                <label>COMMISSION SHARE</label>
            </value>
            <value>
                <fullName>CONTAINER FEE</fullName>
            </value>
            <value>
                <fullName>CUSTOMS</fullName>
            </value>
            <value>
                <fullName>DEPOT</fullName>
            </value>
            <value>
                <fullName>EXPORT PERMIT</fullName>
                <isActive>false</isActive>
                <label>EXPORT PERMIT</label>
            </value>
            <value>
                <fullName>EXPRESS</fullName>
            </value>
            <value>
                <fullName>FREIGHT</fullName>
            </value>
            <value>
                <fullName>FUMIGATION</fullName>
            </value>
            <value>
                <fullName>LASHING</fullName>
            </value>
            <value>
                <fullName>LOADING/UNLOAD</fullName>
            </value>
            <value>
                <fullName>LOCAL CHARGES (POL)</fullName>
                <isActive>false</isActive>
                <label>LOCAL CHARGES (POL)</label>
            </value>
            <value>
                <fullName>LOCAL CHARGES L/C</fullName>
            </value>
            <value>
                <fullName>PACKING</fullName>
            </value>
            <value>
                <fullName>PORT</fullName>
            </value>
            <value>
                <fullName>TRUCKING</fullName>
            </value>
            <value>
                <fullName>TRUCKING &amp; CUSTOM (POL)</fullName>
                <isActive>false</isActive>
                <label>TRUCKING &amp; CUSTOM (POL)</label>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
            <value>
                <fullName>WAREHOUSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>