force-app/main/default/objects/Service__c/fields/CommodityDetail__c.field-meta.xml
<CustomField>
    <fullName>CommodityDetail__c</fullName>
    <label>Commodity Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>