force-app/main/default/objects/Service__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>