force-app/main/default/objects/Service__c/fields/Extra_cost__c.field-meta.xml
<CustomField>
    <fullName>Extra_cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra cost</label>
    <type>Checkbox</type>
</CustomField>