force-app/main/default/objects/Service__c/fields/PickUpPlace__c.field-meta.xml
<CustomField>
    <fullName>PickUpPlace__c</fullName>
    <label>Pick-Up Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>