force-app/main/default/objects/Service__c/fields/Service_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Formula__c</fullName>
    <formula>TEXT( ServiceType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type Formula</label>
    <type>Text</type>
</CustomField>