force-app/main/default/objects/Service__c/fields/ServiceNameChinese__c.field-meta.xml
<CustomField>
    <fullName>ServiceNameChinese__c</fullName>
    <label>Service Name (Chinese)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>