force-app/main/default/objects/Service__c/fields/ServiceNameEng__c.field-meta.xml
<CustomField>
    <fullName>ServiceNameEng__c</fullName>
    <label>Service Name (Eng)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>