force-app/main/default/objects/Service__c/fields/ServiceNameLocal__c.field-meta.xml
<CustomField>
    <fullName>ServiceNameLocal__c</fullName>
    <label>Service Name (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>