force-app/main/default/objects/Service__c/fields/SpecialRate__c.field-meta.xml
<CustomField>
    <fullName>SpecialRate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Rate</label>
    <type>Checkbox</type>
</CustomField>