force-app/main/default/objects/Service__c/fields/StandardMarginRate__c.field-meta.xml
<CustomField>
    <fullName>StandardMarginRate__c</fullName>
    <label>Standard Margin Rate%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>