force-app/main/default/objects/Service__c/fields/StandardSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>StandardSellingUnitPriceLocal__c</fullName>
    <label>Standard Selling Unit Price(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>