force-app/main/default/objects/Service__c/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tariff</label>
    <type>Checkbox</type>
</CustomField>