force-app/main/default/objects/Service__c/fields/TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>TaxCategory__c</fullName>
    <label>Tax Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>