force-app/main/default/objects/Service__c/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <label>Update Date</label>
    <type>Date</type>
</CustomField>