force-app/main/default/objects/Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceCode__c</columns>
    <columns>ServiceNameEng__c</columns>
    <columns>ServiceNameLocal__c</columns>
    <columns>ServiceType__c</columns>
    <columns>Active__c</columns>
    <columns>Tariff__c</columns>
    <columns>Category__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>